<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.example.dola.pestogo.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:scaleType="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2.5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:src="@drawable/articles_1"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_hour"
            android:textStyle="bold|italic"
            android:textSize="22sp"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/presentation_pes"
                android:textStyle="italic"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textStyle="bold|italic"
                android:textSize="32sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp">
                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:drawableStart="@drawable/baseline_room_24"
                    android:text="@string/location"
                    android:paddingBottom="3dp"
                    />
                <!--
                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="3dp"
                    android:drawableStart="@drawable/baseline_room_24"
                    android:text="@string/address"
                    />
                -->
                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="3dp"
                    android:drawableStart="@drawable/baseline_call_24"
                    android:text="@string/phone_number"
                    />
                <TextView
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:drawableStart="@drawable/baseline_language_24"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/website"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="32sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                android:textStyle="bold|italic"
                android:text="@string/activites" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descrip_activites"
                android:textSize="16sp"
                android:paddingLeft="35dp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="3dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etude_conception"
                    android:drawableStart="@drawable/baseline_arrow_right_24"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="3dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-light"
                    android:drawableStart="@drawable/baseline_arrow_right_24"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"
                    android:text="@string/formation"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-light"
                    android:drawableStart="@drawable/baseline_arrow_right_24"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"
                    android:text="@string/vente_installation"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/black"
                    android:drawableStart="@drawable/baseline_arrow_right_24"
                    android:paddingBottom="3dp"
                    android:text="@string/electricite_batiment"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_arrow_right_24"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="sans-serif-light"
                    android:paddingBottom="3dp"
                    android:text="@string/reparation"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
